# OpenTheremin_V3_rust

./: Cargo.toml  README.md  avr-atmega328p.json  uno-runner.sh
src/: irq.rs  main.rs  sintable1.rs
