[package]
name = "opentheremin"
version = "0.1.0"
authors = ["wolfgang"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"


[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "d17a441a667dd65e5a9be75b0e71d1beadf93e84"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
debug-assertions = false

[profile.release]
panic = "abort"
codegen-units = 1
#debug = true
lto = true
opt-level = "s"
