[package]
name = "opentheremin"
version = "0.1.0"
authors = ["wolfgang"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
ufmt = "0.1.0"
avr-device = "0.3.0"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "885e8ec6d6d2fe34f26a1e2697a99f41092f0985"

[dependencies.embedded-hal]
version = "0.2.5"
features = ["unproven"]

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
debug = true
#debug-assertions = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
